# flouze

./: .gitignore  .travis.yml  Cargo.toml  DESIGN  LICENSE  README.md
.circleci/: config.yml
cli/: Cargo.toml
cli/src/: main.rs
docker/: Dockerfile  cargo_config
flouze_flutter/: .gitignore  Cargo.toml  build-android-libs.sh  build-ffi-libs.sh  build-ios-libs.sh  build-jni-libs.sh  build-openssl.sh  build.rs  generate-toolchains.sh  protoc-gen-dart  pubspec.yaml  regenerate-protobuf.sh
flouze_flutter/android/: .gitignore  build.gradle  settings.gradle
flouze_flutter/android/gradle/wrapper/: gradle-wrapper.properties
flouze_flutter/android/src/main/: AndroidManifest.xml
flouze_flutter/android/src/main/java/org/bustany/flouze/flouzeflutter/: FlouzeAsyncTask.java  FlouzeException.java  FlouzeFlutterPlugin.java  JsonRpcClient.java  Repository.java  SledRepository.java  Sync.java
flouze_flutter/ios/: flouze_flutter.podspec
flouze_flutter/ios/Classes/: FlouzeFlutterPlugin.h  FlouzeFlutterPlugin.m  flouze_flutter_ios.h
flouze_flutter/lib/: balance_ffi.dart  bindings.pb.dart  bindings.pbenum.dart  bindings.pbjson.dart  bindings.pbserver.dart  bytes.dart  closeable_pointer.dart  events.dart  ffi_helpers.dart  flouze.pb.dart  flouze.pbenum.dart  flouze.pbjson.dart  flouze.pbserver.dart  flouze_flutter.dart  flouze_lib_ffi.dart  json_rpc_client_ffi.dart  sled_repository_ffi.dart  sync_ffi.dart  utf8.dart
flouze_flutter/proto/: bindings.proto
flouze_flutter/rust/: android.rs  ios.rs  lib.rs
flouze_flutter/test/: flouze_flutter_ffi_test.dart
jni/: .gitignore  Cargo.toml  build.gradle
jni/gradle/wrapper/: gradle-wrapper.properties
jni/src/main/java/flouze/: Flouze.java  FlouzeException.java  Repository.java  SledRepository.java
jni/src/main/rust/: lib.rs
jni/src/test/java/flouze/: FlouzeTest.java
lib/: Cargo.toml  build.rs
lib/proto/: flouze.proto
lib/src/: errors.rs  jsonrpcremote.rs  lib.rs  localremote.rs  model.rs  remote.rs  repository.rs  sledrepository.rs  sync.rs
mobile/: .gitignore  build-apk-for-arch.sh  generate-icon-mipmaps.sh  l10n-extract-translations.sh  l10n-import-from-crowdin.sh  l10n-merge-translations.sh  pubspec.yaml  run-integration-tests.sh  send-clone-account-intent.sh
mobile/android/: .gitignore
mobile/android/app/: build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/java/org/bustany/flouze/: FlouzeMethodCallHandler.java  MainActivity.java
mobile/assets/: .gitignore
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: localization.dart  main.dart  models.dart
mobile/lib/blocs/: account_clone.dart  account_list.dart  account_sync.dart  add_account.dart  balance.dart  transaction.dart  transactions.dart
mobile/lib/l10n/: .gitignore  intl_fr.arb
mobile/lib/pages/: account.dart  account_clone.dart  account_list.dart  add_account.dart  add_transaction.dart  transaction_list.dart  welcome.dart
mobile/lib/utils/: account_config.dart  account_config_store.dart  account_members.dart  amounts.dart  applinks.dart  build_info.dart  config.dart  keys.dart  rpc_client.dart  serializers.dart  services.dart  transactions.dart  uuid.dart
mobile/lib/widgets/: amount_field.dart  currency_input_formatter.dart  member_entry.dart  payed_table.dart  reports.dart  simple_payed_by.dart  simple_payed_for.dart  sync_indicator.dart  transaction_list.dart
mobile/test_driver/: clone_test.dart  create_populate_share.dart  create_populate_share_test.dart  test_utils.dart  user_scenarios.dart  user_scenarios_test.dart
travis/: setup_android_sdk.sh  setup_flouze_flutter_toolchains.sh  setup_rust.sh
