[package]
name = "flouze-cli"
version = "0.1.0"
authors = ["Adrien Bustany <adrien@bustany.org>"]

[dependencies]
env_logger = "0.5.10"
error-chain = "^0.12.0"
log = "0.4"
rand = "^0.5.0"
structopt = "^0.2"
structopt-derive = "^0.2"
uuid = {version = "0.6", features = ["v4"]}

flouze = { path = "../lib" }
