[package]
name = "flouze-cli"
version = "0.1.0"
authors = ["Adrien Bustany <adrien@bustany.org>"]

[dependencies]
env_logger = "0.7.0"
error-chain = "0.12.1"
log = "0.4.8"
rand = "0.7.2"
serde_json = "1.0.40"
structopt = "0.3.2"
structopt-derive = "0.3.2"
uuid = { version = "0.7.4", features = ["v4"] }

flouze = { path = "../lib" }
