[package]
name = "flouze-flutter"
version = "0.1.0"
authors = ["Adrien Bustany <adrien@bustany.org>"]

[lib]
path = "rust/lib.rs"
crate_type = ["cdylib"]

[dependencies]
bytes = "0.4"
jni = "0.10"
prost = "0.4"
prost-derive = "0.4"
flouze = { path = "../lib" }

[build-dependencies]
prost-build = "0.4"
