[package]
name = "flouze-flutter"
version = "0.1.0"
authors = ["Adrien Bustany <adrien@bustany.org>"]

[lib]
path = "rust/lib.rs"
crate_type = ["staticlib", "cdylib"]

[features]
default = []
android = ["jni"]
ios = []

[dependencies]
bytes = "^0.4"
jni = { version = "^0.12", optional = true }
prost = "^0.5"
flouze = { path = "../lib" }

[build-dependencies]
prost-build = "^0.5"
