[package]
name = "flouze"
version = "0.1.0"
authors = ["Adrien Bustany <adrien@bustany.org>"]

[dependencies]
bytes = "0.4"
failure = "^0.1.5"
hex = "^0.3.0"
jsonrpc-core = { git = "https://github.com/paritytech/jsonrpc", rev = "ff4e20ecce6321835aab7a81cbb6fa2458a6082d" }
jsonrpc-core-client = { git = "https://github.com/paritytech/jsonrpc", rev = "ff4e20ecce6321835aab7a81cbb6fa2458a6082d", features = ["tls"] }
jsonrpc-derive = { git = "https://github.com/paritytech/jsonrpc", rev = "ff4e20ecce6321835aab7a81cbb6fa2458a6082d" }
jsonrpc-http-server = { git = "https://github.com/paritytech/jsonrpc", rev = "ff4e20ecce6321835aab7a81cbb6fa2458a6082d" }
log = "^0.4"
prost = "^0.5"
serde = "^1.0.0"
serde_derive = "^1.0.0"
uuid = {version = "0.7", features = ["v4"]}
error-chain = "^0.12.0"
sled = {version = "^0.24.1"}
tokio = "^0.1.20"

[build-dependencies]
prost-build = "^0.5"

[dev-dependencies]
env_logger = "^0.6.1"
