[package]
name = "flouze"
version = "0.1.0"
authors = ["Adrien Bustany <adrien@bustany.org>"]

[dependencies]
bytes = "0.4"
failure = "^0.1.5"
hex = "^0.3.0"
jsonrpc-core = "12.0.0"
jsonrpc-core-client = { version = "12.0.0", features = ["http", "tls"] }
jsonrpc-derive = "12.0.0"
jsonrpc-http-server = "12.0.0"
log = "^0.4"
prost = "^0.5"
serde = "^1.0.0"
serde_derive = "^1.0.0"
uuid = {version = "0.7", features = ["v4"]}
error-chain = "^0.12.0"
sled = {version = "^0.24.1"}
tokio = "^0.1.20"

[build-dependencies]
prost-build = "^0.5"

[dev-dependencies]
env_logger = "^0.6.1"
