[package]
name = "flouze"
version = "0.1.0"
authors = ["Adrien Bustany <adrien@bustany.org>"]

[dependencies]
bytes = "0.4.12"
failure = "0.1.5"
hex = "0.4.0"
jsonrpc-core = "13.2.0"
jsonrpc-core-client = { version = "13.2.0", features = ["http", "tls"] }
jsonrpc-derive = "13.2.0"
jsonrpc-http-server = "13.2.0"
log = "0.4.8"
prost = "0.5.0"
serde = "1.0.101"
serde_derive = "1.0.101"
uuid = { version = "0.7.4", features = ["v4"] }
error-chain = "0.12.1"
sled = "0.28.0"
tokio = "1.8.4"

[build-dependencies]
prost-build = "0.5.0"

[dev-dependencies]
env_logger = "0.7.0"
